[package]
name = "rayhunter-daemon"
version = "0.4.1"
edition = "2024"

[features]
# Device feature flags (mutually exclusive, exactly one must be enabled)
orbic = ["rayhunter/orbic"]
tplink = ["rayhunter/tplink"]
wingtech = ["rayhunter/wingtech"]

# Enhanced analysis features (optional, can be combined)
enhanced_analysis = ["rayhunter/enhanced_analysis"]
gps_support = ["rayhunter/gps_support"]
gps_correlation = ["rayhunter/gps_correlation"]
web_interface = ["rayhunter/web_interface"]

# Convenience combinations
enhanced_full = ["enhanced_analysis", "gps_correlation", "web_interface"]

# Default includes orbic device support
default = ["orbic"]

[[bin]]
name = "rayhunter-daemon"
path = "src/main.rs"

[dependencies]
rayhunter = { path = "../lib" }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.44.2", default-features = false, features = ["fs", "signal", "process", "rt-multi-thread"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
thiserror = "1.0.52"
libc = "0.2.150"
log = "0.4.20"
env_logger = { version = "0.11", default-features = false }
tokio-util = { version = "0.7.10", features = ["rt", "io", "compat"] }
futures-macro = "0.3.30"
include_dir = "0.7.3"
mime_guess = "2.0.4"
chrono = { version = "0.4.31", features = ["serde"] }
tokio-stream = { version = "0.1.14", default-features = false }
futures = { version = "0.3.30", default-features = false }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1.0.114"
image = { version =  "0.25.1", default-features = false, features = ["png", "gif"] }
tempfile = "3.10.1"
simple_logger = "5.0.0"
async_zip = { version = "0.0.17", features = ["tokio"] }
anyhow = "1.0.98"
